[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jhmultiauth"
authors = [{name = "Jason Mansour", email = "jason.mansour@gwdg.de"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "jupyterhub >= 4.0.0",
]

[project.entry-points."jupyterhub.authenticators"]
multiauthenticator = "jhmultiauth:MultiAuthenticator"

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.setuptools.packages.find]
where = ["jhmultiauth"]
